# oop2023

1/: .CMakeLists.txt.swp  Prog1.cpp  (+3 more)
oop_lab3/Tests/: CMakeLists.txt
oop_lab3/Tests/source/: CheckNumTest.cpp  CreateTabTest.cpp  SecurityPlanTest.cpp  SystemSecurityTest.cpp  ViolatorTest.cpp
oop_lab3/lab3/SystemSecurity/: CMakeLists.txt
oop_lab3/lab3/SystemSecurity/Armament/: CMakeLists.txt
oop_lab3/lab3/SystemSecurity/Armament/include/Armament/: Armament.h
oop_lab3/lab3/SystemSecurity/Armament/source/: Armament.cpp
oop_lab3/lab3/SystemSecurity/MobilePlatform/: CMakeLists.txt
oop_lab3/lab3/SystemSecurity/MobilePlatform/include/MobilePlatform/: MobilePlatform.h
oop_lab3/lab3/SystemSecurity/MobilePlatform/source/: MobilePlatform.cpp
oop_lab3/lab3/SystemSecurity/Module/: CMakeLists.txt
oop_lab3/lab3/SystemSecurity/Module/include/Module/: Module.h
oop_lab3/lab3/SystemSecurity/Network/: CMakeLists.txt
oop_lab3/lab3/SystemSecurity/Network/source/: Network.cpp
oop_lab3/lab3/SystemSecurity/Obstacles/: CMakeLists.txt
oop_lab3/lab3/SystemSecurity/Obstacles/source/: Obstacles.cpp
oop_lab3/lab3/SystemSecurity/Optical/: CMakeLists.txt
oop_lab3/lab3/SystemSecurity/Optical/source/: Optical.cpp
oop_lab3/lab3/SystemSecurity/Platform/: CMakeLists.txt
oop_lab3/lab3/SystemSecurity/Sensor/: CMakeLists.txt
oop_lab3/lab3/SystemSecurity/StationaryPlatform/: CMakeLists.txt
oop_lab3/lab3/SystemSecurity/StationaryPlatform/source/: StationaryPlatform.cpp
oop_lab3/lab3/SystemSecurity/Xray/: CMakeLists.txt
oop_lab3/lab3/SystemSecurity/Xray/source/: Xray.cpp
(+193 files in other folders)
